--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header{
 .header-details{
     color: white;
     width: 40%;
+    padding-bottom: 50px;
 }
 .header-details h1{
     font-weight: 700;
@@ -83,10 +84,17 @@ main{
     background-color: white;
     margin: 30px;
     border-radius: 10px;
+    transition: transform 0.4s;
+}
+.mini-nav a:hover{
+    transform: scale(1.2);
 }
 #active-nav{
     background-color: #DD0000;
     color: white;
+}
+.blogs-container{
+    margin-bottom: 100px;
 }
 .blogs{
     display: grid;
@@ -97,7 +105,6 @@ main{
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     margin-bottom: 30px;
 }
-.blog-img{}
 .blog-img img{
     width: 100%;
 }
@@ -111,6 +118,10 @@ main{
     border-radius: 5px;
     border: 0.5px solid lightgray;
     cursor: pointer;
+    transition: box-shadow 0.4s;
+}
+.blog-details button:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .blog-details p{
     margin-bottom: 0;
@@ -123,9 +134,6 @@ main{
     color: rgba(22, 22, 22, 0.7);
     font-weight: 400;
     font-size: 16px;
-}
-.blogs-container{
-    margin-bottom: 100px;
 }
 .blogs-container a{
     text-decoration: none;
@@ -156,7 +164,7 @@ footer h3{
     margin-bottom: 50px;
 }
 hr{
-    width: 70%;
+    width: 80%;
     margin-top: 0;
     margin-bottom: 35px;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -165,17 +173,16 @@ hr{
     margin-bottom: 50px;
 }
 .footer-nav a{
-    padding-top:15px ;
     color: #B9B9B9;
     text-decoration: none;
     margin: 0 25px;
+    margin-top:15px ;
     color: #B9B9B9;
     font-weight: 500;
     font-size: 16px;
 }
 .social-icons i{
     margin: 0 25px;
-    color: #B9B9B9;
     font-weight: 500;
     font-size: 20px;
     cursor: pointer;
@@ -184,4 +191,131 @@ hr{
 .social-icons i:hover{
     transform: scale(1.5);
 }
+.fa-brands{
+    border-radius: 50%;
+    padding: 15px;
+}
+.fa-facebook-f{
+    background-color: rgb(0, 186, 248);
+}
+.fa-twitter{
+    color: rgb(0, 186, 248);
+    background-color: #fff;
+}
+.fa-google-plus-g{
+    background-color: rgb(248, 87, 59);
+}
+
 /* Footer ends */
+
+
+
+/*-----------------
+    Media Queries 
+--------------------*/
+
+/*----------- Tablet---------- */
+@media only screen and (max-width:992px) {
+    .header-details{
+        width: 50%;
+    }
+    .header-details h1{
+        font-size: 30px;
+    }
+    .header-details a{
+        font-size: 15px;
+    }
+    .header-details p{
+        font-size: 14px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+    
+    main{
+        flex-direction: column;
+        align-items: center;
+    }
+    .mini-nav{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .mini-nav a{
+        padding: 8px 18px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        border-radius: 10px;
+    }
+    .blogs{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .hidden-for-tablet{
+        display: none;
+    }
+    .blogs-container a{
+        display: inline-block;
+        margin-left: 40%;
+    }
+
+    .social-icons i{
+        margin: 0 15px;
+    }
+}
+
+
+
+/* ----------------Mobile--------------- */
+@media only screen and (max-width:576px) {
+    header{
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .header-details{
+        width: 100%;
+    }
+    .header-details h1{
+        font-size: 22px;
+    }
+    .header-img{
+        width: 100%;
+    }
+
+    
+    .mini-nav{
+        flex-direction: column;
+    }
+    .blogs-container{
+        margin-bottom: 30px;
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .hidden-for-tablet{
+        display: block;
+    }
+    .blogs-container a{
+        display: none;
+    }
+    
+
+    footer h3{
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+    hr{
+        margin-bottom: 20px;
+    }
+    footer p{
+        font-size: 14px;
+    }
+    .footer-nav{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 25px;
+    }
+    
+}
