--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,7 @@ main{
     gap: 30px;
 }
 .blog{
+    border-radius: 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     margin-bottom: 30px;
 }
@@ -135,7 +136,7 @@ main{
     font-weight: 400;
     font-size: 16px;
 }
-.blogs-container a{
+.hidden-btn{
     text-decoration: none;
     font-weight: 400;
     font-size: 20px;
@@ -145,7 +146,7 @@ main{
     padding: 12px 30px;
     display: none;
 }
-/* Main Starts */
+/* Main ends */
 
 
 
@@ -258,7 +259,7 @@ hr{
     .hidden-for-tablet{
         display: none;
     }
-    .blogs-container a{
+    .hidden-btn{
         display: inline-block;
         margin-left: 40%;
     }
@@ -301,7 +302,7 @@ hr{
     .hidden-for-tablet{
         display: block;
     }
-    .blogs-container a{
+    .hidden-btn{
         display: none;
     }
     
