--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,12 @@ header{
     border-radius: 5px;
     position: absolute;
     animation: bounce 2s ease-in-out 1 ;
+    transition: transform 1s;
 }
+.header-details a:hover{
+   transform: translate(40%,0) scale(1.1);
+}
+
 
 @keyframes bounce {
     0%{
