--- a/styles/style.css
+++ b/styles/style.css
@@ -51,11 +51,12 @@ header{
     background: #DD0000;
     border-radius: 5px;
     position: absolute;
+    bottom: 3%;
     animation: bounce 1s ease-in-out 1 ;
     transition: transform 0.8s;
 }
 .header-details a:hover{
-   transform: translate(40%,0) scale(1.1);
+   transform: translate(40%, 0) scale(1.1);
 }
 
 
@@ -64,7 +65,7 @@ header{
         bottom: 100%;
     }
     100%{
-        bottom: 0;
+        bottom: 3%;
     }
 }
 .header-img{
@@ -302,7 +303,18 @@ hr{
         font-size: 22px;
     }
     .header-details a{
-        position: relative;
+        position: absolute;
+        margin: 0 auto;
+        left: 30%;
+        bottom: 6%;
+    }
+    @keyframes bounce {
+        0%{
+            bottom: 100%;
+        }
+        100%{
+            bottom: 6%;
+        }
     }
     .header-img{
         width: 100%;
